@@ -1,6 +1,6 @@
 /**
 	\file "guile-logo/tortoise-wrap.h"
-	$Id: tortoise-wrap.h,v 1.1 2007/03/08 23:07:29 fang Exp $
+	$Id: tortoise-wrap.h,v 1.2 2007/03/11 21:16:53 fang Exp $
 	guile-scheme interface prototypes.  
 	Keep this file synchronized with interface from "guile-logo/tortoise.h"
  */
@@ -8,14 +8,7 @@
 #ifndef	__GUILE_LOGO_TORTOISE_WRAP_H__
 #define	__GUILE_LOGO_TORTOISE_WRAP_H__
 
-#include "config.h"
-#ifdef	HAVE_LIBGUILE_H
-#ifdef	SIZEOF_LONG_LONG
-#undef	SIZEOF_LONG_LONG
-#endif	// b/c redefined by <libguile/__scm.h>
-#include <libguile.h>
-// really only need <libguile/tags.h> for the SCM type
-#endif
+#include "util/libguile.h"
 
 namespace logo {
 namespace guile {
