@@ -5,6 +5,14 @@
 
 2007-03-11	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-81-03:
+	  Created 'hacguile' guile-interpreter linked to object.  Yay.
+		Now we should theoretically be able to do as we please
+		in the scheme environment.  
+	  No loadable scheme module yet...
+		Not sure if this would work with --disable-shared.  
+
+
 	* HACKT-00-01-04-main-00-81-02-merged-shlib-01-07:
 	  Branch merge:
 	  install-scripts replaced by shlib-linked executables.
